# rl

./: README.md  inference.py  inference_base.py  inference_ppo.py  models.py  ppo.py  pyproject.toml  requirements.txt  train.py  train_reward.py
wandb/: latest-run
wandb/run-20250714_162505-rimhr1sd/: run-rimhr1sd.wandb
wandb/run-20250714_162505-rimhr1sd/files/: wandb-metadata.json
wandb/run-20250714_163527-94y9vvcv/: run-94y9vvcv.wandb
wandb/run-20250714_163527-94y9vvcv/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
